# su2-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
artifacts/coverage/: coverage.json
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/_templates/: .gitkeep
docs/examples/: generated_examples.rst  index.rst
docs/reference/: cli.rst  index.rst  session_manager.rst  stubs.rst  tools.rst
examples/: README.md
examples/client/: tool_discovery.py
examples/server/: http_launch_config.py
examples/su2/: results_snapshot.py  session_lifecycle.py
scripts/: check_coverage_thresholds.py  check_docs_consistency.py  install_su2.sh  tigl_to_su2.py
src/su2_mcp/: __init__.py  __main__.py  config_utils.py  cpacs_adapter.py  fastmcp_server.py  main.py  runtime_check.py  session_manager.py  su2_availability.py  su2_runner.py
src/su2_mcp/data/: __init__.py  box_volume_step.geo
src/su2_mcp/tools/: __init__.py  config_tools.py  mesh_tools.py  ping.py  results_tools.py  run_tools.py  session.py  su2_installation.py
su2_mcp_server/: __init__.py  __main__.py  fastmcp_server.py  main.py  runtime_check.py  session_manager.py  su2_availability.py  su2_runner.py
su2_mcp_server/data/: __init__.py  box_volume_step.geo
su2_mcp_server/tools/: __init__.py  config_tools.py  mesh_tools.py  ping.py  results_tools.py  run_tools.py  session.py  su2_installation.py
tests/: conftest.py  test_analyze_mesh.py  test_cli.py  test_config_and_results_edges.py  test_config_utils.py  test_cpacs_adapter_open_ended.py  test_docs_structure.py  test_examples_smoke.py  test_main_app.py  test_main_cli.py  test_mesh_tools.py  test_ovs_cpacs.py  test_packaging_metadata.py  test_pyproject_extras.py  test_run_tools.py  test_runtime_check.py  test_session_and_run.py  test_su2_availability.py  test_su2_runner.py  test_tools_fastmcp.py  test_tools_runtime.py
