[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su2-mcp-server"
version = "0.1.0"
description = "MCP server for SU2 automation"
authors = [{name = "AutoGen", email = "autogen@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.22.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.6.0",
  "mypy>=1.11.1",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
]

[project.scripts]
su2-mcp-server = "su2_mcp_server.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "D", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
