[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su2-mcp"
version = "0.2.0"
description = "An MCP server around SU2 workflows"
authors = [
  { name = "The Design Research Collective", email = "ask-drc@cmu.edu" }
]
maintainers = [
  { name = "Mayank Dixit", email = "mayankd@andrew.cmu.edu" },
  { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.22.0",
  "pydantic>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/cmudrc/su2-mcp"
Repository = "https://github.com/cmudrc/su2-mcp"
Issues = "https://github.com/cmudrc/su2-mcp/issues"
Documentation = "https://cmudrc.github.io/su2-mcp/"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.0",
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0.0",
  "build>=1.2.0",
  "twine>=5.1.0",
  "pre-commit>=3.8.0",
]
su2 = [
  "SU2",
]

[project.scripts]
su2-mcp = "su2_mcp.main:main"
su2-mcp-check = "su2_mcp.runtime_check:print_runtime_report"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "C4", "D"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
strict = true
exclude = ["^build/"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=su2_mcp --cov-report=term-missing"
pythonpath = ["src"]
markers = [
  "examples_smoke: deterministic example smoke tests",
  "examples_full: extended deterministic example tests",
  "integration_real: optional tests requiring real SU2 binaries",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["su2_mcp*"]

[tool.setuptools.package-data]
su2_mcp = ["data/*.geo"]
